Decide to build a DVD selling website.

--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}简博-访问禁止{% endblock %}
+{% block title %}禁止访问{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1><b>403</b> 访问禁止b></h1>
+    <h1><b>403</b> 禁止访问</h1>
 </div>
 <div class="col-md-8">
     <p>对页面的访问被禁止，没有对应的权限。</p>
