--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}简博-验证邮箱{% endblock %}
+{% block title %}验证邮箱{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
