--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}简博-页面未找到{% endblock %}
+{% block title %}页面未找到{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
