--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}简博-内部服务器错误{% endblock %}
+{% block title %}内部服务器错误{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
