--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}简博-更改邮箱地址{% endblock %}
+{% block title %}更改邮箱{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>更改邮箱地址</h1>
+    <h1>更改邮箱</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
