--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}简博-注册{% endblock %}
+{% block title %}注册{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
