--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}简博-重置密码{% endblock %}
+{% block title %}重置密码{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
