--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}简博{% endblock %}
+{% block title %}迅影{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -22,14 +22,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="javascript:void(0);"><img src="{{ url_for('static', filename='blog.png') }}" width="20" height="20"></a>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">简博</a>
+            <a class="navbar-brand" href="javascript:void(0);"><img src="{{ url_for('static', filename='icon.png') }}" width="20" height="20"></a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">迅影</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">主页</a></li>
                 {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人资料</a></li>
+                <li><a href="{{ url_for('user.profile', username=current_user.username) }}">个人资料</a></li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
