--- a/app/templates/email/confirm.html
+++ b/app/templates/email/confirm.html
@@ -1,8 +1,8 @@
-<p>Dear {{ user.username }},</p>
-<p>Welcome to <b>Flasky</b>!</p>
-<p>To confirm your account please <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">click here</a>.</p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('auth.confirm', token=token, _external=True) }}</p>
-<p>Sincerely,</p>
-<p>The Flasky Team</p>
-<p><small>Note: replies to this email address are not monitored.</small></p>
+<p>亲爱的 {{ user.username }},</p>
+<p>欢迎来到迅影！</p>
+<p>请点击以下链接来验证您的邮箱：</p>
+<p><a href="{{ url_for('auth.change_email', token=token, _external=True) }}">click here</a>.</p>
+<p>若链接无法点击，可以将如下URL复制到浏览器输入框中来访问:</p>
+<p>{{ url_for('auth.change_email', token=token, _external=True) }}</p>
+<p>迅影团队</p>
+<p><small>注意：对此邮件的回复将被忽略</small></p>
