--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}简博{% endblock %}
+{% block title %}迅影{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>你好，{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}!</h1>
 </div>
 <div class="col-md-12">
-    <p>欢迎来到<b>简博</b>，一个轻而美的博客网站。</p>
+    <p>欢迎来到<b>迅影</b>。</p>
+    <p>卖影碟啦，三元一张，十元三张！</p>
 </div>
 {% endblock %}
