--- a/app/templates/user/edit_profile.html
+++ b/app/templates/user/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}简博-编辑个人资料{% endblock %}
+{% block title %}编辑个人资料{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
