--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,9 +28,6 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">主页</a></li>
-                {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('user.profile', username=current_user.username) }}">个人资料</a></li>
-                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
@@ -40,6 +37,8 @@
                         账号 <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('user.profile', username=current_user.username) }}">个人资料</a></li>
+                        <li><a href="{{ url_for('user.edit_profile', username=current_user.username) }}">编辑资料</a></li>
                         <li><a href="{{ url_for('auth.change_password') }}">更改密码</a></li>
                         <li><a href="{{ url_for('auth.change_email_request') }}">更改邮箱</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
