--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -11,25 +11,27 @@
     <div class="profile-header">
         <h1>{{ user.username }}</h1>
         {% if user.name or user.location %}
-        <p>
-            {% if user.name %}姓名：{{ user.name }}<br>{% endif %}
-            {% if user.location %}
-                所在地： <a href="http://maps.baidu.com/?q={{ user.location }}">{{ user.location }}</a><br>
+            {% if user.name %}<p>姓名：{{ user.name }}</p>{% endif %}
+            {% if user.location %}<p>所在地：{{ user.location }}</p>
             {% endif %}
-        </p>
+        {% endif %}
+        {% if current_user.is_administrator() %}
+        <p><a href="mailto:{{ user.email }}">邮箱：{{ user.email }}</a></p>
+        {% else %}
+        <p>邮箱：{{ user.email }}</p>
         {% endif %}
         {% if current_user.is_administrator() %}
         <p><a href="mailto:{{ user.email }}">邮箱：{{ user.email }}</a></p>
         {% endif %}
         {% if user.about_me %}
         个性签名
-            <p><textarea class="text-info">{{ user.about_me }}</textarea></p>
+        <p><textarea class="text-info" readonly>{{ user.about_me }}</textarea></p>
         {% endif %}
         <p>注册时间：{{ moment(user.member_since).format('L') }}</p>
         <p>上次登陆：{{ moment(user.last_seen).fromNow() }}.</p>
         <p>
             {% if user == current_user %}
-            <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">修改个人资料</a>
+            <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">编辑个人资料</a>
             {% endif %}
             {% if current_user.is_administrator() %}
             <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">修改个人资料[管理员]</a>
