--- a/app/templates/manage/edit_movie.html
+++ b/app/templates/manage/edit_movie.html
@@ -8,6 +8,9 @@
     <h1>编辑电影资料</h1>
 </div>
 <div class="col-md-4">
+    <img class="img-rounded" src="data:;base64,{{ base64.b64encode(movie.picture).decode('ascii') }}"/>
+</div>
+<div class="col-md-4">
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
