--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}个人资料{{ user.username }}{% endblock %}
+{% block title %}个人资料{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
