--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href="#" clals="dropdown-toggle" data-toggle="dropdown">
                         <img src="{{ current_user.gravatar(size=18) }}">
                         账号 <b class="caret"></b>
                     </a>
@@ -44,6 +44,17 @@
                         <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
                     </ul>
                 </li>
+                {% if current_user.is_administrator() %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                管理 <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ url_for("manage.manage_movies") }}">管理电影资料</a></li>
+                                <li><a href="{{ url_for("manage.create_movie") }}">创建电影资料</a></li>
+                            </ul>
+                        </li>
+                    {% endif %}
                 {% else %}
                 <li><a href="{{ url_for('auth.register') }}">注册</a></li>
                 <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
