--- a/app/templates/manage/create_movie.html
+++ b/app/templates/manage/create_movie.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}编辑电影资料{% endblock %}
+{% block title %}创建电影资料{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>编辑电影资料</h1>
+    <h1>创建电影资料</h1>
 </div>
 <div class="col-md-4">
-<img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}"/>
+<img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
