--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
 
 {% block navbar %}
@@ -66,7 +66,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container", id="main">
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
