--- a/app/templates/manage/create_movie.html
+++ b/app/templates/manage/create_movie.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/create_movie.css') }}">
+{% endblock %}
 {% block title %}创建电影资料{% endblock %}
 
 {% block page_content %}
