--- a/app/templates/manage/create_movie.html
+++ b/app/templates/manage/create_movie.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/create_movie.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
 {% endblock %}
 {% block title %}创建电影资料{% endblock %}
 
@@ -10,10 +10,12 @@
 <div class="page-header">
     <h1>创建电影资料</h1>
 </div>
-<div class="col-md-4">
-<img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
+<div class="box">
+    <div class="col-md-6">
+    <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
+    </div>
+    <div class="col-md-6">
+        {{ wtf.quick_form(form) }}
+    </div>
 </div>
 {% endblock %}
