--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,11 @@
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
                     <a href="#" clals="dropdown-toggle" data-toggle="dropdown">
-                        <img src="{{ current_user.gravatar(size=18) }}">
+                        {% if current_user.picture %}
+                        <img class="img-rounded" src="data:;base64,{{ base64.b64encode(current_user.picture).decode('ascii') }}" width="18px" height="18px"/>
+                        {% else %}
+                        <img class="img-rounded" src="{{ url_for('static', filename='icon.png') }}" width="18px" height="18px"/>
+                        {% endif %}
                         {{ current_user.name }} <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
