--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -4,10 +4,14 @@
 {% block title %}更改邮箱{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" id="page-header">
     <h1>更改邮箱</h1>
 </div>
-<div class="col-md-4">
+<div class="box">
+    <div class="box1" style="width:60%;margin:0 auto;">
+<div class="col-md-12">
     {{ wtf.quick_form(form) }}
+</div>
+</div>
 </div>
 {% endblock %}
