--- a/app/templates/user/edit_profile.html
+++ b/app/templates/user/edit_profile.html
@@ -4,17 +4,19 @@
 {% block title %}编辑个人资料{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" id="page-header">
     <h1>编辑个人资料</h1>
 </div>
-<div class="col-md-4">
+<div class="box">
+<div class="col-md-6">
     {% if current_user.picture %}
     <img class="img-rounded" src="data:;base64,{{ base64.b64encode(current_user.picture).decode('ascii') }}" width="100%"/>
     {% else %}
     <img class="img-rounded" src="{{ url_for('static', filename='icon.png') }}" width="100%"/>
     {% endif %}
 </div>
-<div class="col-md-4">
+<div class="col-md-6">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
