--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -3,17 +3,18 @@
 {% block title %}个人资料{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" id="page-header">
     <h1>个人资料</h1>
 </div>
-<div class="col-md-4">
+<div class="box">
+<div class="col-md-6">
     {% if user.picture %}
     <img class="img-rounded" src="data:;base64,{{ base64.b64encode(user.picture).decode('ascii') }}" width="100%"/>
     {% else %}
     <img class="img-rounded" src="{{ url_for('static', filename='icon.png') }}" width="100%"/>
     {% endif %}
 </div>
-<div class="col-md-8">
+<div class="col-md-6">
     <div>
         <h1>{{ user.username }}</h1>
         {% if user.name or user.location %}
@@ -42,5 +43,6 @@
             {% endif %}
         </p>
     </div>
+</div>
 </div>
 {% endblock %}
