--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -42,3 +42,14 @@ body{
     resize: none;
 }
 
+#submit {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+
+#delete {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
