--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -22,13 +22,14 @@
     <p>上映日期：{{ movie.date }}</p>
     <p>价格：{{ movie.price }}</p>
     <p>导演：{{ movie.director }}</p>
-    <p>简介：
-    </p><p>
-        {% if movie.description %}
-            {{ movie.description }}
-        {% else %}
-            {{ movie.description }}
-        {% endif %}
+    简介：
+    <p><textarea class="text-info" readonly style="width:100%;height:200px">{{ movie.description }}</textarea>
     </p>
 </div>
+<center>
+    <button class="btn btn-success" style="margin:0 auto;">购买</button>
+    <button class="btn btn-primary" style="margin:0 auto;">返回</button>
+
+</center>
+
 {% endblock %}
