--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -29,13 +29,13 @@
         {% endif %}
         {% if user.about_me %}
         个性签名
-        <p><textarea class="text-info" readonly>{{ user.about_me }}</textarea></p>
+        <p><textarea class="text-info" readonly style="width:100%;height:100%">{{ user.about_me }}</textarea></p>
         {% endif %}
         <p>注册时间：{{ moment(user.member_since).format('L') }}</p>
         <p>上次登陆：{{ moment(user.last_seen).fromNow() }}.</p>
         <p>
             {% if user == current_user %}
-            <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">编辑个人资料</a>
+            <a class="btn btn-primary" href="{{ url_for('.edit_profile') }}">编辑个人资料</a>
             {% else %}
                 {% if current_user.is_administrator() %}
                 <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">编辑个人资料[管理员]</a>
