--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -18,12 +18,17 @@
     {% endif %}
 </div>
 <div class="col-md-9">
-    <p>名称:{{ movie.name }}</p>
-    <p>上映日期：{{ movie.date }}</p>
-    <p>价格：{{ movie.price }}</p>
-    <p>导演：{{ movie.director }}</p>
-    简介：
-    <p><textarea class="text-info" readonly style="width:100%;height:200px">{{ movie.description }}</textarea>
+    <p><b>名称：</b>{{ movie.name }}</p>
+    <p><b>上映日期：</b>{{ movie.date }}</p>
+    <p><b>价格：</b>{{ movie.price }}</p>
+    <p><b>导演：</b>{{ movie.director }}</p>
+    <p><b>简介：</b>
+    </p><p>
+        {% if movie.description %}
+            {{ movie.description }}
+        {% else %}
+            {{ movie.description }}
+        {% endif %}
     </p>
 </div>
 <center>
