--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -10,31 +10,26 @@
     <h1>{{ movie.name }}</h1>
 </div>
 
-<div class="col-md-3">
+<div class="box">
+<div class="col-md-4">
     {% if movie.picture %}
     <img class="img-rounded" src="data:;base64,{{ base64.b64encode(movie.picture).decode('ascii') }}" width="100%"/>
     {% else %}
     <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
     {% endif %}
 </div>
-<div class="col-md-9">
+<div class="col-md-8">
     <p><b>名称：</b>{{ movie.name }}</p>
     <p><b>上映日期：</b>{{ movie.date }}</p>
     <p><b>价格：</b>{{ movie.price }}</p>
     <p><b>导演：</b>{{ movie.director }}</p>
-    <p><b>简介：</b>
-    </p><p>
-        {% if movie.description %}
-            {{ movie.description }}
-        {% else %}
-            {{ movie.description }}
-        {% endif %}
-    </p>
+    <b>简介：</b>
+    <p><textarea class="text-info" readonly style="width:100%;height:150px; border:none">{{ movie.description }}</textarea></p>
 </div>
-<center>
+<div style="text-align:center;">
     <button class="btn btn-success" style="margin:0 auto;">购买</button>
-    <button class="btn btn-primary" style="margin:0 auto;">返回</button>
+    <button class="btn btn-primary" style="margin:0 auto;" onclick="javascript:history.back(1);">返回</button>
 
-</center>
-
+</div>
+</div>
 {% endblock %}
