--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -15,6 +15,7 @@ body{
     width: 80%;
     margin:0 auto;
     padding: 10px;
+    margin-bottom: 20px;
     overflow: hidden;
     -webkit-border-radius: 10px;
     border-radius: 10px;
