--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -24,11 +24,11 @@
     <p><b>价格：</b>{{ movie.price }}</p>
     <p><b>导演：</b>{{ movie.director }}</p>
     <b>简介：</b>
-    <p><textarea class="text-info" readonly style="width:100%;height:150px; border:none">{{ movie.description }}</textarea></p>
+    <p><textarea class="text-info" readonly style="width:100%;height:150px; border:none; outline:none; cursor:default;">{{ movie.description }}</textarea></p>
 </div>
 <div style="text-align:center;">
     <button class="btn btn-success" style="margin:0 auto;">购买</button>
-    <button class="btn btn-primary" style="margin:0 auto;" onclick="javascript:history.back(1);">返回</button>
+    <button class="btn btn-default" style="margin:0 auto;" onclick="javascript:history.back(1);">返回</button>
 
 </div>
 </div>
