增加了评论功能

--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -1,10 +1,49 @@
-
-.page-header h1{
-    text-align: center;
+#cmts{
+    padding-left: 0;
+    padding-left: 10px;
 }
 
-.box1{
-    position: relative;
-    width: 80%;
-    margin: 0 auto;
+ul#cmts li{
+    width:100%;
+    list-style: none;
+    border-bottom: 1px solid #eee;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+
+.avatar-group{
+    width:100%;
+    height: 100%;
+    float: left;
+}
+
+.avatar-group .avatar{
+    width: 38px;
+    height: 38px;
+}
+
+.avatar-title{
+    font-weight: 900;
+}
+
+.comment-content{
+    width: 90%;
+}
+
+.comment-group{
+    float: left;
+    margin-left: 40px;
+    width: 100%;
+}
+
+.comment-info{
+    width: 90%;
+    text-align: right;
+}
+
+.comment-info .comment-author{
+    margin-right: 20px;
+}
+
+#title{
 }
