--- a/app/templates/manage/create_movie.html
+++ b/app/templates/manage/create_movie.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/manage.css') }}">
 {% endblock %}
 {% block title %}创建电影资料{% endblock %}
 
