--- a/app/templates/subject/comment.html
+++ b/app/templates/subject/comment.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
@@ -11,27 +12,6 @@
 </div>
 
 <div class="box">
-    <div class="col-md-4">
-        {% if movie.picture %}
-        <img class="img-rounded" src="data:;base64,{{ base64.b64encode(movie.picture).decode('ascii') }}" width="100%"/>
-        {% else %}
-        <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
-        {% endif %}
-    </div>
-    <div class="col-md-8">
-        <p><b>名称：</b>{{ movie.name }}</p>
-        <p><b>上映日期：</b>{{ movie.date }}</p>
-        <p><b>价格：</b>{{ movie.price }}</p>
-        <p><b>导演：</b>{{ movie.director }}</p>
-        <b>简介：</b>
-        <p><textarea class="text-info" readonly
-                     style="width:100%;height:150px; border:none; outline:none; cursor:default;">{{ movie.description }}</textarea>
-        </p>
-    </div>
-    <div style="text-align:center;">
-        <button class="btn btn-success" style="margin:0 auto;">购买</button>
-    </div>
-    <hr>
     <h3><span class="label label-default">评论</span></h3>
     <ul id="cmts">
         {% for comment in movie.comments %}
@@ -55,11 +35,6 @@
         </li>
         {% endfor %}
     </ul>
-    <div style="text-align:center;">
-        <a href="{{ url_for('subject.comment', id=movie.id) }}">
-            <button class="btn btn-primary" type="button">评论</button>
-        </a>
-    </div>
+    {{ wtf.quick_form(form) }}
 </div>
-
 {% endblock %}
