--- a/app/templates/manage/manage_movies.html
+++ b/app/templates/manage/manage_movies.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "pagination.html" as macros %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/manage.css') }}">
@@ -48,6 +49,11 @@
                 <button class="btn btn-primary" type="button" >创建</button>
             </a>
         </div>
+        {% if pagination %}
+        <div class="pagination">
+            {{ macros.pagination_widget(pagination, '.manage_movies') }}
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
