--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "pagination.html" as macros %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
@@ -34,7 +35,7 @@
     <hr>
     <h3><span class="label label-default">评论</span></h3>
     <ul id="cmts">
-        {% for comment in movie.comments %}
+        {% for comment in comments %}
         <li>
             <div class="avatar-group">
                 {% if comment.author.picture %}
@@ -55,6 +56,11 @@
         </li>
         {% endfor %}
     </ul>
+    {% if pagination %}
+    <div class="pagination">
+        {{ macros.pagination_widget(pagination, '.movie', id=movie.id) }}
+    </div>
+    {% endif %}
     <div style="text-align:center;">
         <a href="{{ url_for('subject.comment', id=movie.id) }}">
             <button class="btn btn-primary" type="button">评论</button>
