--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -62,7 +62,7 @@
     </div>
     {% endif %}
     <div style="text-align:center;">
-        <a href="{{ url_for('subject.comment', id=movie.id) }}">
+        <a href="{{ url_for('subject.comment', id=movie.id, comments=comments, pagination=pagination) }}">
             <button class="btn btn-primary" type="button">评论</button>
         </a>
     </div>
