--- a/app/templates/subject/comment.html
+++ b/app/templates/subject/comment.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "pagination.html" as macros %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
@@ -12,9 +13,9 @@
 </div>
 
 <div class="box">
-    <h3><span class="label label-default">评论</span></h3>
     {{ wtf.quick_form(form) }}
-    <button class="btn btn-default" id="back" onclick= "javascript:window.location.href='{{ url_for('subject.movie', id=movie.id) }}';">返回</button>
+    <button class="btn btn-default" id="back" onclick= "javascript:window.location.href='{{ url_for('subject.movie', id=movie.id) }}';">返回</button><br/>
+    <hr/>
     <ul id="cmts">
         {% for comment in comments %}
         <li>
