--- a/app/templates/subject/comment.html
+++ b/app/templates/subject/comment.html
@@ -40,7 +40,7 @@
     </ul>
     {% if pagination %}
     <div class="pagination">
-        {{ macros.pagination_widget(pagination, '.movie', id=movie.id) }}
+        {{ macros.pagination_widget(pagination, '.comment', id=movie.id) }}
     </div>
     {% endif %}
 </div>
