--- a/app/templates/subject/movies.html
+++ b/app/templates/subject/movies.html
@@ -8,7 +8,7 @@
 {% block title %}热映电影{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" id="page-header">
     <h1>热映电影</h1>
 </div>
 
