--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -30,7 +30,7 @@
         </p>
     </div>
     <div style="text-align:center;">
-        <button class="btn btn-success" style="margin:0 auto;">购买</button>
+        <button class="btn btn-success" style="margin:0 auto;" onclick= "javascript:window.location.href='{{ url_for('subject.buy', id=movie.id) }}';">购买</button>
     </div>
     <hr>
     <h3><span class="label label-default">评论</span></h3>
