--- a/app/templates/subject/comment.html
+++ b/app/templates/subject/comment.html
@@ -32,7 +32,7 @@
                 <p class="comment-content">{{ comment.body }}</p>
                 <div class="comment-info">
                     <span class="glyphicon glyphicon-user comment-author">{{ comment.author.name }}</span>
-                    <span class="glyphicon glyphicon-time comment-time">{{ comment.timestamp }}</span>
+                    <span class="glyphicon glyphicon-time comment-time">{{ (comment.timestamp+timedelta(hours=8)).strftime("%Y-%m-%d %H:%M:%S") }}</span>
                 </div>
             </div>
         </li>
