--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,9 +30,7 @@
                 <li><a href="{{ url_for('main.index') }}">主页</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="{{ url_for('subject.movies') }}">电影</a>
-                </li>
+                <li><a href="{{ url_for('subject.movies') }}">电影</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
@@ -54,6 +52,7 @@
                         <li><a href="{{ url_for('user.edit_profile', username=current_user.username) }}">编辑资料</a></li>
                         <li><a href="{{ url_for('auth.change_password') }}">更改密码</a></li>
                         <li><a href="{{ url_for('auth.change_email_request') }}">更改邮箱</a></li>
+                        <li><a href="{{ url_for('user.order') }}">订单详情</a></li>
                         <li><a href="{{ url_for('user.balance') }}">账户余额:{{ current_user.money }}</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
                     </ul>
