--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -9,7 +9,7 @@
     </h1>
 </div>
 <div class="col-md-12">
-    <h3>欢迎来到简博！</h3>
+    <h3>欢迎来到迅影！</h3>
     <p>
         您还没有验证您的邮箱。
         为了正常访问博客内容，请验证您的邮箱。
