--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">主页</a></li>
                 <li><a href="{{ url_for('subject.movies') }}">电影</a></li>
+                <li><a href="{{ url_for('search.search', name='', director='', year='全部年份') }}">分类</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li>
