--- a/app/templates/search/search.html
+++ b/app/templates/search/search.html
@@ -56,7 +56,33 @@
 {% if pagination %}
 <div style="text-align: center;">
     <div class="pagination">
-        {{ macros.pagination_widget(pagination, '.movies') }}
+        <ul class="pagination">
+            <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
+                <a href="{% if pagination.has_prev %}{{ url_for('.search', name=name, director=director, year=year, page=pagination.prev_num) }}{% else %}#{% endif %}">
+                    上一页
+                </a>
+            </li>
+            {% for p in pagination.iter_pages() %}
+                {% if p %}
+                    {% if p == pagination.page %}
+                    <li class="active">
+                        <a href="{{ url_for('.search', name=name, director=director, year=year, page = p) }}">{{ p }}</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a href="{{ url_for('.search', name=name, director=director, year=year, page = p) }}">{{ p }}</a>
+                    </li>
+                    {% endif %}
+                {% else %}
+                <li class="disabled"><a href="#">&hellip;</a></li>
+                {% endif %}
+            {% endfor %}
+            <li{% if not pagination.has_next %} class="disabled"{% endif %}>
+                <a href="{% if pagination.has_next %}{{ url_for('.search', name=name, director=director, year=year, page=pagination.next_num) }}{% else %}#{% endif %}">
+                    下一页
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
 {% endif %}
